--- a/resources/public/lp-static/css/main-blessed1.css
+++ b/resources/public/lp-static/css/main-blessed1.css
@@ -8330,7 +8330,7 @@ ul.tabs {
 /* line 118, ../../../private/common-html/sass/partials/_tabs.scss */
 .tab-content h1 {
   line-height: normal;
-  float: left;
+  display: inline-block;
 }
 
 /* line 124, ../../../private/common-html/sass/partials/_tabs.scss */
@@ -9373,11 +9373,12 @@ ul.tabs {
 }
 
 /* line 23, ../../../private/common-html/sass/partials/_help.scss */
-.stacked.help-toggle {
+.stacked.help-toggle,
+.stacked.help-toggle div {
   overflow-y: visible;
 }
 
-/* line 28, ../../../private/common-html/sass/partials/_help.scss */
+/* line 29, ../../../private/common-html/sass/partials/_help.scss */
 .help-text {
   display: none;
   position: relative;
@@ -9387,29 +9388,29 @@ ul.tabs {
   margin-bottom: 24px;
   border: 1px solid #f7ac2e;
 }
-/* line 37, ../../../private/common-html/sass/partials/_help.scss */
+/* line 38, ../../../private/common-html/sass/partials/_help.scss */
 .help-text p:last-child {
   margin-bottom: 0;
 }
 
-/* line 43, ../../../private/common-html/sass/partials/_help.scss */
+/* line 44, ../../../private/common-html/sass/partials/_help.scss */
 .tab-info {
   width: 80%;
 }
 
-/* line 50, ../../../private/common-html/sass/partials/_help.scss */
+/* line 51, ../../../private/common-html/sass/partials/_help.scss */
 .help-reset {
   clear: both;
   max-height: 6px;
 }
 
-/* line 55, ../../../private/common-html/sass/partials/_help.scss */
+/* line 56, ../../../private/common-html/sass/partials/_help.scss */
 .panel-info {
   width: 100%;
   text-align: justify;
 }
 
-/* line 60, ../../../private/common-html/sass/partials/_help.scss */
+/* line 61, ../../../private/common-html/sass/partials/_help.scss */
 .expanded-content {
   max-height: 0;
   overflow: hidden;
@@ -9417,21 +9418,21 @@ ul.tabs {
   -webkit-transition: max-height 400ms;
   /* Safari */
 }
-/* line 65, ../../../private/common-html/sass/partials/_help.scss */
+/* line 66, ../../../private/common-html/sass/partials/_help.scss */
 .expanded-content.expand {
   max-height: 1000px;
 }
 
-/* line 70, ../../../private/common-html/sass/partials/_help.scss */
+/* line 71, ../../../private/common-html/sass/partials/_help.scss */
 .page-info {
   margin: 12px 0;
 }
 
-/* line 75, ../../../private/common-html/sass/partials/_help.scss */
+/* line 76, ../../../private/common-html/sass/partials/_help.scss */
 .help-adjacent-title {
   margin-top: 0 !important;
   line-height: normal;
-  float: left;
+  display: inline-block;
 }
 
 /* line 1, ../../../private/common-html/sass/partials/_autocomplete.scss */
@@ -11644,8 +11645,4 @@ span.icon_clear:before {
 /* line 133, ../../../private/common-html/sass/views/_application.scss */
 .application_summary .application_summary_info .help-text p, .application_summary .application_summary_info .summary-help p {
   width: 100%;
-}
-/* line 137, ../../../private/common-html/sass/views/_application.scss */
-.application_summary .application_summary_info .link-permit {
-  display: block;
 }
