Review tasks table refactor.

--- a/resources/private/common-html/sass/views/_verdict.scss
+++ b/resources/private/common-html/sass/views/_verdict.scss
@@ -84,33 +84,5 @@ ul.appeals-files {
   }
 }
 
-.appeals-table {
-  @extend .table;
-  td.appeals-table--action {
-    text-align: right;
-    a {
-      padding-right: 2em;
-    }
-  }
-  tr.appeals-table__note {
-    padding: {
-    left: 2em;
-    right: 2em;
-  }
-    &:active {
-      background-color: initial;
-    }
-    background-color: white;
-    td.appeals-table--extra {
-      white-space: pre-wrap;
-    }
-    td.appeals-table--no-extra {
-      color: $gray187;
-    }
-  }
-  div.bubble-dialog {
-    border: none;
-  }
-}
 
-
+@include note-table ( appeals ) {}
