--- a/resources/private/common-html/sass/partials/_tables.scss
+++ b/resources/private/common-html/sass/partials/_tables.scss
@@ -219,3 +219,40 @@ td.negative {
   background-color: $negative;
   color: white;
 }
+
+@mixin note-table($name) {
+  .#{$name}-table {
+    @extend .table;
+    td.#{$name}-table--action {
+      text-align: right;
+      a {
+        padding-right: 2em;
+      }
+    }
+    td.#{$name}-table--icons {
+      text-align: center;
+      color: $primary;
+    }
+    tr.#{$name}-table__note {
+      padding: {
+      left: 2em;
+      right: 2em;
+    }
+      &:active {
+        background-color: initial;
+      }
+      background-color: white;
+      td.#{$name}-table--extra {
+        white-space: pre-wrap;
+      }
+      td.#{$name}-table--no-extra {
+        color: $gray187;
+      }
+    }
+    div.bubble-dialog {
+      border: none;
+    }
+  }
+}
+
+@include note-table ( reviews ) {}
