--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -1,5 +1,42 @@
-@import url('main-blessed1.css?z=1459503741251');
+@import url('main-blessed1.css?z=1459860171082');
 
+/* line 107, ../../../private/common-html/sass/views/_application.scss */
+.application_summary .application_summary_info {
+  margin: 0 24px 24px 24px;
+  color: #333333;
+}
+/* line 110, ../../../private/common-html/sass/views/_application.scss */
+.application_summary .application_summary_info h1 {
+  width: 100%;
+  color: #333333;
+}
+/* line 113, ../../../private/common-html/sass/views/_application.scss */
+.application_summary .application_summary_info h1 a {
+  padding-left: 32px;
+  background-position: 8px -4200px;
+}
+/* line 118, ../../../private/common-html/sass/views/_application.scss */
+.application_summary .application_summary_info h2 {
+  color: #333333;
+}
+/* line 121, ../../../private/common-html/sass/views/_application.scss */
+.application_summary .application_summary_info a {
+  font-size: 15px;
+  text-transform: none;
+  height: auto;
+  width: auto;
+}
+/* line 127, ../../../private/common-html/sass/views/_application.scss */
+.application_summary .application_summary_info .summary-help {
+  width: 100%;
+  background-color: #eeeeee;
+  font-size: 0.8em;
+  font-style: italic;
+}
+/* line 133, ../../../private/common-html/sass/views/_application.scss */
+.application_summary .application_summary_info .help-text p, .application_summary .application_summary_info .summary-help p {
+  width: 100%;
+}
 /* line 137, ../../../private/common-html/sass/views/_application.scss */
 .application_summary .application_summary_info .link-permit {
   display: block;
@@ -1002,6 +1039,11 @@
 /* line 934, ../../../private/common-html/sass/views/_application.scss */
 h2 > i.is-right {
   float: right;
+}
+
+/* line 938, ../../../private/common-html/sass/views/_application.scss */
+div.review-tasks {
+  margin-top: 20px;
 }
 
 /* line 1, ../../../private/common-html/sass/views/_create_application.scss */
@@ -2311,33 +2353,38 @@ ul.appeals-files li span.appeals-files__size {
   text-align: right;
 }
 
-/* line 89, ../../../private/common-html/sass/views/_verdict.scss */
+/* line 226, ../../../private/common-html/sass/partials/_tables.scss */
 .appeals-table td.appeals-table--action {
   text-align: right;
 }
-/* line 91, ../../../private/common-html/sass/views/_verdict.scss */
+/* line 228, ../../../private/common-html/sass/partials/_tables.scss */
 .appeals-table td.appeals-table--action a {
   padding-right: 2em;
 }
-/* line 95, ../../../private/common-html/sass/views/_verdict.scss */
+/* line 232, ../../../private/common-html/sass/partials/_tables.scss */
+.appeals-table td.appeals-table--icons {
+  text-align: center;
+  color: #f39129;
+}
+/* line 236, ../../../private/common-html/sass/partials/_tables.scss */
 .appeals-table tr.appeals-table__note {
   padding-left: 2em;
   padding-right: 2em;
   background-color: white;
 }
-/* line 100, ../../../private/common-html/sass/views/_verdict.scss */
+/* line 241, ../../../private/common-html/sass/partials/_tables.scss */
 .appeals-table tr.appeals-table__note:active {
   background-color: initial;
 }
-/* line 104, ../../../private/common-html/sass/views/_verdict.scss */
+/* line 245, ../../../private/common-html/sass/partials/_tables.scss */
 .appeals-table tr.appeals-table__note td.appeals-table--extra {
   white-space: pre-wrap;
 }
-/* line 107, ../../../private/common-html/sass/views/_verdict.scss */
+/* line 248, ../../../private/common-html/sass/partials/_tables.scss */
 .appeals-table tr.appeals-table__note td.appeals-table--no-extra {
   color: #bbbbbb;
 }
-/* line 111, ../../../private/common-html/sass/views/_verdict.scss */
+/* line 252, ../../../private/common-html/sass/partials/_tables.scss */
 .appeals-table div.bubble-dialog {
   border: none;
 }
@@ -3211,7 +3258,7 @@ div.olControlZoom a:hover, .olControlLupapisteEditingToolbar div:hover {
 
 /* basic styles*/
 /* line 211, ../../../private/common-html/sass/main.scss */
-.table, .appeals-table {
+.table, .reviews-table, .appeals-table {
   font-size: 16px;
   line-height: 24px;
 }
