Minor style tweaks for attachments.

--- a/resources/private/common-html/sass/views/_attachment.scss
+++ b/resources/private/common-html/sass/views/_attachment.scss
@@ -303,3 +303,11 @@ td.comment-text {
     font-size: 50px;
   }
 }
+
+// Used when editing tasks, for example
+.targetted-attachments {
+  margin: {
+  top: 10px;
+  bottom: 10px;
+}
+}
