--- a/resources/private/common-html/sass/main.scss
+++ b/resources/private/common-html/sass/main.scss
@@ -139,6 +139,7 @@
 @import "views/_company";
 @import "views/_attachment_multiselect";
 @import "views/_openlayers2";
+@import "views/_resources";
 
 /*------------------------------------*\
     OTHER
