--- a/resources/private/common-html/sass/views/_resources.scss
+++ b/resources/private/common-html/sass/views/_resources.scss
@@ -1,13 +1,29 @@
 #dialog-view-calendar {
   width:$cols8;
   min-height:$baseline * 6;
-  height: auto;
+  height: 90%;
 
-  table td {
-    background: $gray246;
+  .dialog-content {
+    height: 100%;
+    overflow-y: scroll;
+  }
 
-    &:nth-child(even) {
-      background: white;
+  table {
+    width: 97%;
+    td {
+      background: $gray246;
+      padding: $marginS;
+
+      &:nth-child(even) {
+       background: white;
+      }
+
+      div.timeline-slot {
+       height: $baseline*2;
+       &:hover {
+         background: $gray221;
+       }
+      }
     }
   }
 }
