--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -1,5 +1,25 @@
-@import url('main-blessed1.css?z=1459938799727');
+@import url('main-blessed1.css?z=1460380503796');
 
+/* line 87, ../../../private/common-html/sass/views/_application.scss */
+.application_summary .application-map-container .map {
+  float: left;
+  margin: 12px;
+}
+/* line 91, ../../../private/common-html/sass/views/_application.scss */
+.application_summary .application-map-container .application-map-actions {
+  position: absolute;
+  z-index: 1000;
+  left: 0;
+  top: 256px;
+  text-align: center;
+  display: block;
+  background: #04c714;
+}
+/* line 100, ../../../private/common-html/sass/views/_application.scss */
+.application_summary .application-map-container .application-map-actions .map-search-button {
+  color: white;
+  padding: 0 24px;
+}
 /* line 107, ../../../private/common-html/sass/views/_application.scss */
 .application_summary .application_summary_info {
   margin: 0 24px 24px 24px;
