--- a/resources/private/common-html/sass/partials/_archival-summary.scss
+++ b/resources/private/common-html/sass/partials/_archival-summary.scss
@@ -168,3 +168,13 @@
     }
   }
 }
+
+.tos-function-correction {
+  margin-top: 3em;
+  p {
+    margin-bottom: 1em;
+  }
+  select {
+    min-width: 500px;
+  }
+}
